# SimpleCC

./: .gitattributes  .gitignore  .replit  ArgParser.h  CMakeLists.txt  README.md  SimpleCC.kdev4  SimpleCToC.h  keywords.h  libscc.h  makefile  scc.cpp  test.simplec  test.simplec.c  testfile.sc  testfile.simplec  testtest.simplec.c
.github/workflows/: main.yml
